--- a/src/templates/views/data.ejs
+++ b/src/templates/views/data.ejs
@@ -9,13 +9,23 @@
     <link rel="stylesheet" href="../partial/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </head>
 <script>
     closealert()
     {
-        document.getElementsByClassName('alert').style.display='none';
+        document.getElementsByClassName('alert').style.display = 'none';
     }
 </script>
+
 <body>
     <nav class="navbar navbar-expand-lg bg-light nav-height">
         <div class="container-fluid">
@@ -53,16 +63,16 @@
     </nav>
 
     <br>
-    
+
     <div class="div-customer">
         <div class="table-background">
-                    <% if(success!=''){%>
-                        <div class="alert alert-success" role="alert">
-                            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                            <strong>Success</strong>
-                            <%= success %>
-                        </div>
-                    <% } %>
+            <% if(success!='' ){%>
+                <div class="alert alert-success" role="alert">
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                    <strong>Success</strong>
+                    <%= success %>
+                </div>
+                <% } %>
                     <br><br><br>
                     <div style="overflow-x: auto;">
                         <% if(details!=null) { %>
@@ -113,7 +123,7 @@
                             <button type="submit" class="btn btn-primary">Transfer</button>
                         </form>
                     </div>
-                </div>
+        </div>
 </body>
 
 </html>
