--- a/src/templates/views/index.ejs
+++ b/src/templates/views/index.ejs
@@ -9,11 +9,21 @@
     <link rel="stylesheet" href="../partial/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img src="../images/logo.png" id="logo" alt="Bootstrap" width="30" height="24">
             </a>
             <a class="navbar-brand" href="#">SahuBank</a>
@@ -45,6 +55,13 @@
             </div>
         </div>
     </nav>
+    <% if(success!='') {%>
+    <div class="alert alert-success" role="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>Success</strong>
+        <%= success %>
+    </div>
+    <% } %>
     <div class="main">
         <div class="left-div">
             <h1 class="heading-first">SahuBank</h1>
@@ -55,11 +72,13 @@
                 <form action="/newcustomer" method="POST">
                     <div class="mb-3">
                         <label for="exampleInputName" class="form-label">Name</label>
-                        <input type="name" name="name"class="form-control" id="exampleInputname" aria-describedby="emailHelp">
+                        <input type="name" name="name" class="form-control" id="exampleInputname"
+                            aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+                            aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
@@ -76,10 +95,6 @@
         </div>
     </div>
 </body>
-<script type="text/javascript">
-    function alert()
-    {
-        alert("You account has been successfully opened")
-    }
-</script>
+
+
 </html>
