--- a/styles/partials/index.css
+++ b/styles/partials/index.css
@@ -12,9 +12,9 @@
 {
     margin-bottom: -20px;
 }
-.collapse {
+/* .collapse {
     padding-left: 47rem;
-}
+} */
 
 .left-div {
     text-align: center;
