--- a/styles/partials/index.css
+++ b/styles/partials/index.css
@@ -3,18 +3,14 @@
     padding: 0 0;
 }
 
-#logo
-{
+#logo {
     height: 30px;
     width: 35px;
 }
-.nav-height
-{
+
+.nav-height {
     margin-bottom: -20px;
 }
-/* .collapse {
-    padding-left: 47rem;
-} */
 
 .left-div {
     text-align: center;
@@ -51,12 +47,33 @@
     background-size: cover;
     background-position: center center;
     display: grid;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 100px;
 }
 
+@media (max-width:952px) {
+    .heading-first {
+        font-size: 3rem;
+        font-weight: 700;
+    }
+    .main
+    {
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 50px;
+        padding-bottom: 60px;
+    }
+    .right-div 
+    {
+        align-items: center;
+        font-size: 1rem;
+        width: 85%;
+        height: 100%;
+        padding: 2rem 2rem 2rem 2rem;
+        margin: 0 auto;
+    }
+}
 
 
 /* View All Customers */
@@ -69,6 +86,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    padding-bottom: 60px;
 }
 
 table.view-table {
@@ -97,6 +115,7 @@ th {
 table.view-table tr:last-child>td {
     border-bottom: none;
 }
+
 tr,
 td {
     padding: 1rem 1rem 1rem 1rem;
@@ -111,25 +130,42 @@ tr:nth-child(odd) {
 }
 
 
-.selectone
-{
+.selectone {
     margin: 0 auto;
     display: flex;
+    background: white;
+    border: 3px white solid;
+    border-radius: 3rem;
+    font-size: 1.3rem;
+    width: 40%;
+    height: 85%;
+    padding: 2rem 2rem 2rem 2rem;
     justify-content: center;
-    padding: 5rem 5rem 5rem 5rem;
     align-items: center;
 }
-.selectone input
+@media (max-width:952px)
+{
+    .selectone
+    {
+        width: 70%;
+    }
+}
+.selectone form 
 {
     width: 100%;
 }
-.selectone label
-{
+
+.selectone input {
+    border: 1px solid balck;
+    width: 100%;
+}
+
+.selectone label {
     font-weight: 500;
     font-size: 1.5rem;
 }
-.alert
-{
+
+.alert {
     padding: 20px;
     background-color: red;
     color: white;
@@ -137,8 +173,8 @@ tr:nth-child(odd) {
     transition: opacity 0.6s;
     margin-bottom: 15px;
 }
-.closebtn
-{
+
+.closebtn {
     margin-left: 15px;
     color: white;
     font-weight: bold;
@@ -148,11 +184,11 @@ tr:nth-child(odd) {
     cursor: pointer;
     transition: 0.3s;
 }
-.closebtn:hover
-{
+
+.closebtn:hover {
     color: black;
 }
-.alert.success
-{
+
+.alert.success {
     background-color: greenyellow;
 }
